--- a/src/scss/case/hashira-labs/_layout.scss
+++ b/src/scss/case/hashira-labs/_layout.scss
@@ -1,7 +1,7 @@
 .case-hashira-labs {
   position: relative;
   width: 100%;
-  overflow-x: hidden;
+  overflow-x: clip;
   font-family: $hl-font;
   color: $hl-ink;
   background: $hl-bg;
