--- a/src/scss/case/imagine/_layout.scss
+++ b/src/scss/case/imagine/_layout.scss
@@ -1,7 +1,7 @@
 
 .case-imagine {
   width: 100%;
-  overflow-x: hidden;
+  overflow-x: clip;
   font-family: $im-font;
   color: $im-text-black;
   background: $im-page-bg;
