--- a/src/scss/case/part-pilot/_layout.scss
+++ b/src/scss/case/part-pilot/_layout.scss
@@ -1,7 +1,7 @@
 .case-part-pilot {
   position: relative;
   width: 100%;
-  overflow-x: hidden;
+  overflow-x: clip;
   font-family: $pp-font;
   color: $pp-ink;
   background: $pp-bg;
